--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -22,10 +22,10 @@
     width: 2px;
     width: 2px;
     height: 6px;
-    padding: 1px;
+    padding: 0;
   }
   *::-webkit-scrollbar-track {
-    border-radius: 1px;
+    border-radius: 12px;
     background-color: #EBEBEB;
   }
   
@@ -53,6 +53,23 @@
     backdrop-filter: blur(25px) saturate(195%);
     -webkit-backdrop-filter: blur(25px) saturate(195%);
     background-color: rgba(144, 19, 254, 0.44);
-    border-radius: 12px;
+    /* border-radius: 12px; */
     border: 1px solid rgba(255, 255, 255, 0.125);
 }
+.copier {
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(17, 25, 40, 0.75);
+  /* border-radius: 12px; */
+  border: 1px solid rgba(255, 255, 255, 0.125);
+}
+.copier-body {
+background: hsla(191, 88%, 81%, 1);
+
+background: linear-gradient(225deg, hsla(191, 88%, 81%, 1) 0%, hsla(260, 72%, 82%, 1) 52%, hsla(247, 73%, 69%, 1) 100%);
+
+background: -moz-linear-gradient(225deg, hsla(191, 88%, 81%, 1) 0%, hsla(260, 72%, 82%, 1) 52%, hsla(247, 73%, 69%, 1) 100%);
+
+background: -webkit-linear-gradient(225deg, hsla(191, 88%, 81%, 1) 0%, hsla(260, 72%, 82%, 1) 52%, hsla(247, 73%, 69%, 1) 100%);
+
+filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#A4E9F9", endColorstr="#C5AEF2", GradientType=1 );}
